@@ -1,3 +1,12 @@
+2009-07-21  Darren Kenny  <darren.kenny@sun.com>
+
+	* common/nwamui_ncp.c: 
+	  Change some warnings to be debug statements.
+	* daemon/status_icon.c: 
+	  Fix bug in daemon_status_changed which was blanking the menus when
+	  the daemon state changed.
+	  Added handlers for the new daemon enm and env list notifications.
+
 2009-07-20  Darren Kenny  <darren.kenny@sun.com>
 
 	* capplet/capplet-utils.c, capplet/nwam_location_dialog.c: 
